@@ -9,29 +9,30 @@
 #' but the nature of the geologic record often makes this difficult, with taxa from different regions, environments and sedimentary basins
 #' having first and last appearances placed in entirely in-congruent systems of chronostratigraphic intervals. While one option is to convert
 #' such occurrences to a single, global stratigraphic system, this may still result in overlapping intervals when fossil collections are poorly
-#' constrained stratigraphically. (For example, this may often be the case in global datasets.) This function
-#' offers an approach to avoid this issue in large datasets by randomly subsampling the available taxa and intervals to produce stochastic
-#' sets of ranges composed of data drawn from non-overlapping intervals.
+#' constrained stratigraphically. (For example, this may often be the case in global datasets.) 
+
+#' This function offers an approach to avoid this issue in large datasets by randomly subsampling
+#' the available taxa and intervals to produce stochastic
+#' sets of ranges composed of data drawn from non-overlapping intervals. 
 #'
 #' This function is stochastic and thus should be set for many runs to produce many such solutions. Additionally,
-#' it will only produce 
-
- If, as in this dataset, taxa sometimes are known from collections that could have been from very long intervals and often overlap with each other,
- it is imperative to find a ‘solution’ which retains a large proportion of taxa and intervals but removes intervals that are overlapping, including
- the taxa found in them. However, a single solution which maximizes taxa and intervals may not be a precise enough approach to estimating sampling 
- rates, given uncertainty in the data.
-
-One issue is that when we search for solutions, we could either select intervals at random with uniform probability (which I’ll refer to as the 
-‘unweighted’ approach henceforth) or we could weight selection toward the smallest intervals, which presumably overlap the least (the ‘weighted’
- approach). In general, these two approaches did not produce very different estimates, and though I should the results for both below, 
- I’ll generally give preference to the ‘unweighted’ solutions as they are a simpler methodology.
-
- Many solutions produce infinite sampling values, which in this case is due to only sampling taxa found in only single intervals, which leads
- to a funky likelihood surface. We’ll ‘clean’ our data henceforth and ignore solutions that produced infinite sampling rates in this discussion.
+#' all solutions found are returned, and users may wish to sort amongst these to maximize the number of intervals and 
+#' number of taxa returned. A single solution which maximizes returned taxa and intervals may not be a precise enough approach
+#' to estimating sampling rates, however, given the uncertainty in data. Thus, many runs should always be considered.
+#'
+#' By default, solutions are searched for without consideration to the length of intervals used (i.e. the selection of intervals is 'unweighted').
+#' Alternatively, we can 'weight' selection toward the smallest intervals in the set, using the argument \code{weightSampling}. Smaller
+#' intervals presumably overlap less and thus should retain more taxa and intervals of more equal length. However, in practise with empirical datasets,
+#' the package author finds these approaches do not seem to produce very different estimates.
+#'
+#' For some datasets, many solutions found using seqTimeList may return infinite sampling values. This is often due to saving too many taxa
+#' found in single intervals to the exclusion of longer-ranging taxa (see the example). This excess of single interval taxa is a clear artifact
+#' of the randomized seqTimeList procedure and such solutions should probably be ignored.
  
- 
- 
-#' @param timeList 
+#' @param timeList A list composed of two matrices, giving interval start and end 
+#' dates and taxon first and last occurrences within those intervals. Some intervals
+#' are expected to overlap (thus necessitating the use of this function), and datasets
+#' lacking overlapping intervals will return an error message.
 
 #' @param nruns Number of new timeList composed of non-overlapping intervals produced.
 
@@ -43,15 +44,12 @@ One issue is that when we search for solutions, we could either select intervals
 #' taxa in each solution and \code{timeLists} which is a list composed of each new
 #' timeList object as an element.
 
-#' @aliases
-
-#' @seealso Resulting time-lists can be analyzed with \code{\link{freqRat}}, \code{\link{}}, etc.
-#'
+#' @seealso 
+#' Resulting time-lists can be analyzed with \code{\link{freqRat}}, \code{\link{durationFreq}, etc.
+#' 
 #' Additionally, \code{\link{binTimeData}} can be useful for simulating interval data.
 
 #' @author David W. Bapst
-
-#' @references
 
 #' @examples
 #' #Simulate some fossil ranges with simFossilTaxa
@@ -70,6 +68,7 @@ One issue is that when we search for solutions, we could either select intervals
 #' seqLists$nTaxa
 #' seqLists$nIntervals
 #' 
+#' #apply freqRat as an example analysis
 #' sapply(seqLists$timeLists,freqRat)
 #' 
 #' #notice the zero and infinite freqRat estimates? What's going on?
